push,delete,put,get crud operation from frontend and handled by backend

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 ShoppingList-RecipeBook/node_modules/
+ShoppingList-RecipeBook/.angular/cache/16.1.7/angular-webpack/
+ShoppingList-RecipeBook/.angular/cache/16.1.7/
 recipe-book-backend/node_modules/
 /dist
 /tmp
